style.css
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

.nav-absolute {
    background-color: black;
}

header p{
    position: absolute;
    z-index: 1;
    font-size: 2rem;
}

header img {
    width: 100%;
    position: relative;
 
}

#nav-menu{
    display: flex;
    justify-content: center;
    
}

.hide {
    display: none;
}



#contact-page .socmed {
    display: flex;
    justify-content: space-evenly;
    list-style: none;
    
    
}

#contact-page .socmed i {
    color: black;
}



#registration-container {
    width: 50%;
}

#login-container{
    width: 50%;
}

#message-box {
    height: 150px;
    border-radius: 8px;
    border-color: black;
}


#category-box {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: white;
    position: relative;
    top: -70px;
    background-color: transparent;
    height: 100%;
    width: 100%;
    
    
    
}

.hscroll {
    display: none;
    width: 770px;
    height: 120px;
    background-color: white;
    border: solid 1px #ddd;
    border-radius: 20px;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    position: relative;
    overflow: hidden;
    padding: 0;
    
}

.hscroll .btn-scroll {
    background-color: white;
    color: black;
    padding: 85px 10px;
    border: 0;
    z-index: 1;
    box-shadow: 0 0 0px;
    cursor: pointer;
}

.category-items {
   
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    position: absolute;
    left: 0;
    transition: 0.5s all ease-in-out;
    
}

.product-item a img {
    height: 50px;
    width: 80px;
}

.product-item {
    margin: 15px 30px;
    display: flex;
    justify-content: center;
    align-items: center;
    transform: rotateZ('45deg');

}
.product-item a {
    text-align: center;
    text-decoration: none;
    color: black;
   
}
.product-item img {
    height: 150px;
    width: 150px;
    transform: rotateZ('-45deg');
}


.row-product {
    display: flex;
    justify-content: space-evenly;
    background-color: rgba(255, 255, 255, 1);
    top: -40px;
    position: relative;
    border-radius: 50px;
    margin-bottom: 70px;
    
    
}

.card-product {
    height: 80px;
    background-color: white;
    /* top: -50px;
    position: relative; */
    border-radius: 5px;
    

}

.card-product a {
    text-decoration: none;
    color: black;
    text-transform: uppercase;
    font-weight: bold;
    
}

.card-product img {
    height: 70px;
    width: 100%;
    display: flex;
    object-fit: contain;
    margin-top: 5px;
    
}

.card-product img:hover {
    transform: scale(0.8);
    
}

#best-seller {
    position: relative;
}

#best-seller a::before {
    content: "";
    position: absolute;
    top: 0px;
    right: 0px;
    bottom: 0px;
    left: 0px;
  }


#best-seller .card{
    height: 35rem;
    width: auto;
    display: flex;
    flex-wrap: wrap;
    justify-self: center;
 
}

#best-seller .card img{
    height: 15em;
    width: 70%;
    margin: 30px 0;
    object-fit: contain;
    

}
#best-seller p {
    font-size: 1.3em;
}



#new-arrival {
    position: relative;
}

#new-arrival a::before {
    content: "";
    position: absolute;
    top: 0px;
    right: 0px;
    bottom: 0px;
    left: 0px;
  }


#new-arrival .card{
    height: 35rem;
    width: auto;
    display: flex;
    flex-wrap: wrap;
    justify-self: center;
}


#new-arrival .card img{
    height: 15em;
    width: 70%;
    margin: 30px 0;
    object-fit: contain;

}
#new-arrival p {
    font-size: 1.3em;
}

#product-list img {
   
 object-fit: contain;

}




footer {
    background-color: #ddd;
    bottom: 0;
}

footer ul {
    list-style: none;
    padding: 0;
    text-align: center

}
footer ul a{
    text-decoration: none;
    color: black;
    
}

footer .socmed {
    display: flex;
    justify-content: space-around;
    list-style:none;
}

footer h3 {
    margin-top: 30px;
}




@media screen and (max-width:991px) {

    #registration-container {
        width: 100%;
    }

    #login-container {
        width: 100%;
    }

    #category-box {
        margin-left: 1px;
    }


    .hscroll {
        display: flex;
        width: 100%;
        height: 100px;
        
    }

    
    .row-product {
        display: none;
    }

    #nav-menu {
        display: flex;
        justify-content: start;
    }
 

}

